--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,26 @@
 
 # Datasource ??
 spring:
+  messages:
+    basename: errors
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test
     username: sa
     password:
-  
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   # H2 ?????? ?? ??
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
+
+server:
+  servlet:
+    session:
+      timeout: 1800
+      tracking-modes: cookie
+
