--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 # Datasource ??
 spring:
   messages:
-    basename: errors
+    basename: messages,errors
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test
