--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 
-# Datasource ??
+# Datasource 소스
 spring:
+  thymeleaf:
+    cache: false
   messages:
     basename: messages,errors
   datasource:
@@ -8,19 +10,31 @@ spring:
     url: jdbc:h2:mem:test
     username: sa
     password:
+  # H2 설정
   h2:
     console:
       enabled: true
       path: /h2-console
-  # H2 ?????? ?? ??
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
+# 세션 유지 시간 30분
 server:
   servlet:
     session:
       timeout: 1800
       tracking-modes: cookie
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
 
