스프링 시큐리티 전환 작업 완료

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,8 +2,7 @@
 NotBlank=필수 정보입니다.
 Email=이메일 형식을 지켜주세요.
 Size.memberFormDto.password=8~16자 사이어야 합니다.
-duplicated.email=사용할수 없는 이메일입니다.
-
+duplicated.email=이미 가입된 이메일입니다.
 NotBlank.PostFormDto.description=내용을 입력해주세요.
 
 loginFail=아이디 또는 비밀번호가 맞지 않습니다.
