--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 
 # Datasource 소스
 spring:
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 100MB
   thymeleaf:
     cache: false
   messages:
@@ -37,4 +41,12 @@ logging:
         type:
           descriptor:
             sql: trace
+
+# 상품 이미지 업로드 경로
+
+upload:
+  postImgLocation: C:/doinggajigaji/post
+  uploadPath: file:///C:/doinggajigaji/
+# 리소스 업로드 경로
+
 
