--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -5,4 +5,5 @@ Size.memberFormDto.password=8~16자 사이어야 합니다.
 duplicated.email=이미 가입된 이메일입니다.
 NotBlank.PostFormDto.description=내용을 입력해주세요.
 
+Size.PasswordChangeDto=8자이상 16자 이하로 입력해주세요.
 loginFail=아이디 또는 비밀번호가 맞지 않습니다.
