--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,19 +20,14 @@ spring:
   messages:
     basename: messages,errors
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test
-    username: sa
-    password:
-  # H2 설정
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    url: jdbc:mysql://dancingwhale.clqa4sewjdov.ap-northeast-2.rds.amazonaws.com:3306/dancingwhale
+    username: k1ng
+    password: g5ph2357
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -61,6 +56,11 @@ upload:
   postImgLocation: C:/doinggajigaji/post
   uploadPath: file:///C:/doinggajigaji/
 # 리소스 업로드 경로
+
+secretKey:
+  ZVZ9QR/ED0UKkYNGUXpJqWFNfQbPUstrAaib/rWZ
+accessKey:
+  AKIAYGAB2ZYLGG34KDIU
 
 
 
